# combat-lab-webdemo-0.2-r3-handfeel-fix6-normalized-sprites

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  agent.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-dnf-extract.yml  combat-lab-ci.yml  jekyll-gh-pages.yml
.serena/: project.yml
docs/: 00-project-mainline-v0.1.md  01-project-identity.md  02-neople-dnf-open-api-auxiliary-material.md  02-technical-design-document-v0.1.md  04-gap-and-roadmap-v0.1.md  README.md  combat-attack-hit-reaction-chain.md  dnf-combat-replica-implementation-technical-report.md  dnf-combat-system-reconstruction-engineering-report.md  documentation-audit-overlap-report.md
docs/changelog/: handfeel-fix4-asset-update-notes.md
docs/design/: 00-project-mainline-v0.1.md  01-core-concept-document-v0.1.md  01-project-identity.md  02-concept-art-game-design-v0.1.md  source-policy.md  tuning-baseline.md
docs/engineering/: 02-technical-design-document-v0.1.md  03-development-workflow-v0.1.md  architecture-improvement-plan.md  architecture-overview.md  art-asset-pipeline-spec.md
docs/planning/: 04-gap-and-roadmap-v0.1.md  batch-a-execution-plan.md  bloodruin-verification.md  crt-002-frame-evidence.md  crt-003-hitbox-evidence.md  crt-004-ai-evidence.md  crt-005-formula-evidence.md  dfo-action-handfeel-replication-plan.md  dfo-combat-implementation-backlog.md  dfo-handfeel-next-backlog.md  (+2 more)
scripts/: analyze.mjs  assert-runtime-evidence.mjs  batch-a-fetch.mjs  browser-smoke.mjs  build.mjs  extract-actions.mjs  extract-berserker-action.mjs  extract-equipment-layer.mjs  generate-actions.mjs  run-tsc.mjs  validate-assets.mjs  validate-sprites.mjs
src/: main.ts
tools/: event-trace.mjs  extract-assets.mjs  manifest-consumers.mjs  pipeline-dump.mjs
tools/dnf-porting-src/: BufferReader.h  CMakeLists.txt  ImgFile.cpp  ImgFile.h  NpkFile.cpp  NpkFile.h  PvfDocument.cpp  PvfDocument.h  PvfReader.cpp  PvfReader.h  PvfScript.cpp  main.cpp  tellenc.h
(+211 files in other folders)
